--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -57,7 +57,8 @@
     <footer class="purple-bg">
         <div class="container">
             <p class="content has-text-centered">
-                &copy; {{ "now"|date("Y") }} Lovenest
+                &copy; {{ "now"|date("Y") }} Lovenest<br>
+                Logo by <a href="https://dribbble.com/contrast8">Deividas Bielskis</a>
             </p>
         </div>
     </footer>
