fixtures with profile pics

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,8 +28,8 @@
                             Accueil
                         </a>
 
-                        <a class="navbar-item">
-                            Todo
+                        <a class="navbar-item" href="{{ path('profile_list') }}">
+                            Mes suggestions
                         </a>
                     </div>
 
