--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -14,11 +14,19 @@
         </div>
     {% endif %}
 
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputUsername">Username</label>
-    <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control" required autofocus>
-    <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" required>
+    <h2 class="h3 mb-3 font-weight-normal">Connectez-vous !</h2>
+    <div class="field">
+        <label class="label required" for="inputUsername">Pseudo</label>
+        <div class="control">
+            <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control input" required autofocus>
+        </div>
+    </div>
+    <div class="field">
+        <label class="label required" for="inputPassword">Mot de passe</label>
+        <div class="control">
+            <input type="password" name="password" id="inputPassword" class="form-control input" required>
+        </div>
+    </div>
 
     <input type="hidden" name="_csrf_token"
            value="{{ csrf_token('authenticate') }}"
@@ -35,8 +43,8 @@
         </div>
     #}
 
-    <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
+    <button class="button" type="submit">
+        Connexion !
     </button>
 </form>
 {% endblock %}
