inline date fields

--- a/templates/form_theme/bulma_0_3_x_layout.html.twig
+++ b/templates/form_theme/bulma_0_3_x_layout.html.twig
@@ -104,7 +104,7 @@
 
 {%- block date_widget -%}
     {%- if widget != 'single_text' -%}
-        {%- set attr = attr|merge({class: (attr.class|default('') ~ ' control is-grouped date-widget')|trim}) -%}
+        {%- set attr = attr|merge({class: (attr.class|default('') ~ ' control is-flex date-widget')|trim}) -%}
     {%- endif -%}
     {{- parent() -}}
 {%- endblock date_widget -%}
