--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -101,7 +101,7 @@
         <div class="container">
             <p class="content has-text-centered">
                 &copy; {{ "now"|date("Y") }} Lovenest<br>
-                Logo by <a href="https://dribbble.com/contrast8">Deividas Bielskis</a>
+                Logo by <a href="https://dribbble.com/contrast8">Deividas Bielskis</a> <- This guy is good
             </p>
         </div>
     </footer>
